--- a/CV.html
+++ b/CV.html
@@ -9,24 +9,27 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="monCss.css">
 
-    <title>Curriculum Vitæ</title>
+    <title>Xan Olazcuaga Garibal</title>
   </head>
   <body>
-    <div class="row">
-      <div class="col-md-12 col-sm-6 col-xs-3">
-        <ul class="nav nav-justified">
-  				<li class="nav-item">
-  					<a class="nav-link active" href="index.html">Accueil</a>
-  				</li>
-  				<li class="nav-item">
-  					<a class="nav-link active" href="#">CV</a>
-  				</li>
-  				<li class="nav-item">
-  					<a class="nav-link acttive" href="contact.html">Contact</a>
-  				</li>
-        </ul>
-      </div>
-    </div>
+    <div class="container-fluid">
+          <div class="header navbar navbar-fixed-top" role="navigation">
+            <div class="col-md-12 col-sm-6 col-xs-3">
+              <ul class="nav nav-tabs nav-justified">
+        				<li class="nav-item">
+        					<a class="nav-link " href="index.html">Accueil</a>
+        				</li>
+        				<li class="nav-item">
+        					<a class="nav-link active" href="#">CV</a>
+        				</li>
+        				<li class="nav-item">
+        					<a class="nav-link " href="contact.html">Contact</a>
+        				</li>
+              </ul>
+            </div>
+          </div>
+    		</div>
+    	</div>
     <br>
     <div class="container-fluid">
     	<div class="row">
