--- a/index.html
+++ b/index.html
@@ -10,31 +10,28 @@
     <!-- Surcharge du css de bootstrap pour faire apparaitre les colonnes -->
     <link rel="stylesheet" href="monCss.css">
 
-    <title>Accueil</title>
+    <title>Xan Olazcuaga Garibal</title>
   </head>
   <body>
-    <div class="container-fluid">
-	<div class="row">
-		<div class="col-md-12 col-sm-6 col-xs-3">
-			<img src="baniere.jpg" class="img-fluid" alt="Responsive image">
+
+<div class="container-fluid">
+      <div class="header navbar navbar-fixed-top" role="navigation">
+        <div class="col-md-12 col-sm-6 col-xs-3">
+          <ul class="nav nav-tabs nav-justified">
+    				<li class="nav-item">
+    					<a class="nav-link active" href="#">Accueil</a>
+    				</li>
+    				<li class="nav-item">
+    					<a class="nav-link " href="CV.html">CV</a>
+    				</li>
+    				<li class="nav-item">
+    					<a class="nav-link " href="contact.html">Contact</a>
+    				</li>
+          </ul>
+        </div>
+      </div>
 		</div>
 	</div>
-
-  <div class="row">
-    <div class="col-md-12 col-sm-6 col-xs-3">
-      <ul class="nav nav-tabs nav-justified">
-				<li class="nav-item">
-					<a class="nav-link active" href="#">Accueil</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link active" href="CV.html">CV</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link active" href="contact.html">Contact</a>
-				</li>
-      </ul>
-    </div>
-  </div>
   <br>
 	<div class="row">
 		<div class="col-md-12">
