--- a/CV.html
+++ b/CV.html
@@ -13,23 +13,25 @@
   </head>
   <body>
     <div class="container-fluid">
-          <div class="header navbar navbar-fixed-top" role="navigation">
-            <div class="col-md-12 col-sm-6 col-xs-3">
-              <ul class="nav nav-tabs nav-justified">
-        				<li class="nav-item">
-        					<a class="nav-link " href="index.html">Accueil</a>
-        				</li>
-        				<li class="nav-item">
-        					<a class="nav-link active" href="#">CV</a>
-        				</li>
-        				<li class="nav-item">
-        					<a class="nav-link " href="contact.html">Contact</a>
-        				</li>
-              </ul>
-            </div>
-          </div>
-    		</div>
-    	</div>
+      <div class="header navbar navbar-fixed-top" role="navigation">
+        <div class="col-md-12 col-sm-6 col-xs-3">
+          <ul class="nav nav-tabs nav-justified">
+        		<li class="nav-item">
+        			<a class="nav-link " href="index.html">Accueil</a>
+        		</li>
+        		<li class="nav-item">
+        			<a class="nav-link active" href="#">CV</a>
+        		</li>
+            <li class="nav-item">
+              <a class="nav-link " href="contact.html">Compétences</a>
+            </li>
+        		<li class="nav-item">
+        			<a class="nav-link " href="contact.html">Contact</a>
+        		</li>
+          </ul>
+        </div>
+      </div>
+    </div>
     <br>
     <div class="container-fluid">
     	<div class="row">
