--- a/competences.html
+++ b/competences.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="fr">
+<html lang="en">
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -7,8 +7,6 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <!-- Surcharge du css de bootstrap pour faire apparaitre les colonnes -->
-    <link rel="stylesheet" href="monCss.css">
 
     <title>Xan Olazcuaga Garibal</title>
   </head>
@@ -17,42 +15,23 @@
       <div class="header navbar navbar-fixed-top" role="navigation">
         <div class="col-md-12 col-sm-6 col-xs-3">
           <ul class="nav nav-tabs nav-justified">
-            <li class="nav-item">
-              <a class="nav-link " href="index.html">Accueil</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="#">CV</a>
-            </li>
+        		<li class="nav-item">
+        			<a class="nav-link " href="index.html">Accueil</a>
+        		</li>
+        		<li class="nav-item">
+        			<a class="nav-link active" href="#">CV</a>
+        		</li>
             <li class="nav-item">
               <a class="nav-link " href="contact.html">Compétences</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link " href="contact.html">Contact</a>
-            </li>
+        		<li class="nav-item">
+        			<a class="nav-link " href="contact.html">Contact</a>
+        		</li>
           </ul>
         </div>
       </div>
     </div>
-  <br>
-	<div class="row">
-		<div class="col-md-12">
-			<h3>
-				Bonjour et bienvenue!
-			</h3>
-			<p>
-        Vous trouverez sur ce site quelques informations sur mon parcours ainsi que des informations sur mes compétences.
-        N'hésitez pas à me contacter à partir de l'onglet contact en cas de besoin!
-			</p>
-		</div>
-	</div>
-  <footer>
-	<div class="row">
-		<div class="col-md-12">
-      hljhblhb
-		</div>
-	</div>
-</footer>
-</div>
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
