Mise en place des compétences (test)

--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="fr">
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -20,13 +20,13 @@
         			<a class="nav-link " href="index.html">Accueil</a>
         		</li>
         		<li class="nav-item">
-        			<a class="nav-link active" href="#">CV</a>
+        			<a class="nav-link " href="CV.html">CV</a>
         		</li>
             <li class="nav-item">
-              <a class="nav-link " href="contact.html">Compétences</a>
+              <a class="nav-link " href="competences.html">Compétences</a>
             </li>
         		<li class="nav-item">
-        			<a class="nav-link " href="contact.html">Contact</a>
+        			<a class="nav-link active" href="#">Contact</a>
         		</li>
           </ul>
         </div>
