--- a/CV.html
+++ b/CV.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="fr">
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -23,7 +23,7 @@
         			<a class="nav-link active" href="#">CV</a>
         		</li>
             <li class="nav-item">
-              <a class="nav-link " href="contact.html">Compétences</a>
+              <a class="nav-link " href="competences.html">Compétences</a>
             </li>
         		<li class="nav-item">
         			<a class="nav-link " href="contact.html">Contact</a>
@@ -88,15 +88,9 @@
     			<h3>
     				Compétences
     			</h3>
-          <div class="progress">
-            <div class="progress-bar progress-bar-success progress-bar-striped" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 40%">
-              HTML5, CSS3
-            </div>
-          </div>
-    		</div>
     	</div>
     </div>
-
+  </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
