--- a/competences.html
+++ b/competences.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="fr">
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -7,6 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="monCss.css">
 
     <title>Xan Olazcuaga Garibal</title>
   </head>
@@ -19,10 +20,10 @@
         			<a class="nav-link " href="index.html">Accueil</a>
         		</li>
         		<li class="nav-item">
-        			<a class="nav-link active" href="#">CV</a>
+        			<a class="nav-link " href="CV.html">CV</a>
         		</li>
             <li class="nav-item">
-              <a class="nav-link " href="contact.html">Compétences</a>
+              <a class="nav-link active" href="#">Compétences</a>
             </li>
         		<li class="nav-item">
         			<a class="nav-link " href="contact.html">Contact</a>
@@ -31,6 +32,102 @@
         </div>
       </div>
     </div>
+    <br>
+    <br>
+    <div class="container-fluid">
+	<div class="row">
+		<div class="col-md-6">
+			<div class="row">
+				<div class="col-md-3">
+          HTML5, CSS3
+				</div>
+				<div class="col-md-9">
+					<div class="progress">
+            <div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 86%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
+              86%
+            </div>
+					</div>
+				</div>
+			</div>
+		</div>
+    <br>
+		<div class="col-md-6">
+			<div class="row">
+				<div class="col-md-3">
+          PHP
+				</div>
+				<div class="col-md-9">
+					<div class="progress">
+            <div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 86%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
+              86%
+            </div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+  <br>
+	<div class="row">
+		<div class="col-md-6">
+			<div class="row">
+				<div class="col-md-3">
+				</div>
+				<div class="col-md-9">
+					<div class="progress">
+            <div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 86%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
+              86%
+            </div>
+					</div>
+				</div>
+			</div>
+		</div>
+    <br>
+		<div class="col-md-6">
+			<div class="row">
+				<div class="col-md-3">
+				</div>
+				<div class="col-md-9">
+					<div class="progress">
+            <div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 86%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
+              86%
+            </div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+  <br>
+	<div class="row">
+		<div class="col-md-6">
+			<div class="row">
+				<div class="col-md-3">
+				</div>
+				<div class="col-md-9">
+					<div class="progress">
+            <div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 86%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
+              86%
+            </div>
+					</div>
+				</div>
+			</div>
+		</div>
+    <br>
+		<div class="col-md-6">
+			<div class="row">
+				<div class="col-md-3">
+				</div>
+				<div class="col-md-9">
+					<div class="progress">
+            <div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 86%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
+              86%
+            </div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+<br>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
