--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
         <div class="col-md-12 col-sm-6 col-xs-3">
           <ul class="nav nav-tabs nav-justified">
             <li class="nav-item">
-              <a class="nav-link " href="index.html">Accueil</a>
+              <a class="nav-link active" href="#">Accueil</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="#">CV</a>
+              <a class="nav-link " href="CV.html">CV</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link " href="contact.html">Compétences</a>
+              <a class="nav-link " href="competences.html">Compétences</a>
             </li>
             <li class="nav-item">
               <a class="nav-link " href="contact.html">Contact</a>
@@ -45,6 +45,13 @@
 			</p>
 		</div>
 	</div>
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="js/bootstrap.min.js"></script>
+  </body>
   <footer>
 	<div class="row">
 		<div class="col-md-12">
@@ -52,11 +59,4 @@
 		</div>
 	</div>
 </footer>
-</div>
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="js/bootstrap.min.js"></script>
-  </body>
 </html>
