--- a/index.html
+++ b/index.html
@@ -34,29 +34,45 @@
       </div>
     </div>
   <br>
-	<div class="row">
-		<div class="col-md-12">
-			<h3>
-				Bonjour et bienvenue!
-			</h3>
-			<p>
-        Vous trouverez sur ce site quelques informations sur mon parcours ainsi que des informations sur mes compétences.
-        N'hésitez pas à me contacter à partir de l'onglet contact en cas de besoin!
-			</p>
-		</div>
-	</div>
+  <br>
+  <br>
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="js/bootstrap.min.js"></script>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-md-4">
+      </div>
+      <div class="col-md-4">
+        <h3>
+          <strong>Bonjour et bienvenue!</strong><br><br>
+        </h3>
+        <p>
+          Vous trouverez sur ce site quelques informations sur mon parcours ainsi que des informations sur mes compétences.<br><br>
+          N'hésitez pas à me contacter à partir de l'onglet <strong>Contact</strong> en cas de besoin!
+        </p>
+      </div>
+      <div class="col-md-4">
+      </div>
+    </div>
+    <br>
+    <br>
+    <br>
+    <div class="container-fluid">
+      <footer>
+        <div class="col-md-4">
+        </div>
+        <div class="col-md-4">
+        </div>
+        <div class="col-md-4">
+        </div>
+      </footer>
+    </div>
+  </div>
+
+
+  <!-- Optional JavaScript -->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+  <script src="js/bootstrap.min.js"></script>
   </body>
-  <footer>
-	<div class="row">
-		<div class="col-md-12">
-      hljhblhb
-		</div>
-	</div>
-</footer>
 </html>
