Formulaire contact en cours

--- a/competences.html
+++ b/competences.html
@@ -9,25 +9,28 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="monCss.css">
 
-    <title>Xan Olazcuaga Garibal</title>
+    <title>Xan Olazcuaga Garibal - Compétences</title>
   </head>
   <body>
     <div class="container-fluid">
       <div class="header navbar navbar-fixed-top" role="navigation">
         <div class="col-md-12 col-sm-6 col-xs-3">
           <ul class="nav nav-tabs nav-justified">
-        		<li class="nav-item">
-        			<a class="nav-link " href="index.html">Accueil</a>
-        		</li>
-        		<li class="nav-item">
-        			<a class="nav-link " href="CV.html">CV</a>
-        		</li>
+            <li class="nav-item">
+              <a class="nav-link " href="index.html">Accueil</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link " href="etudes.html">Diplômes et études</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link " href="expPro.html">Expériences professionnelles</a>
+            </li>
             <li class="nav-item">
               <a class="nav-link active" href="#">Compétences</a>
             </li>
-        		<li class="nav-item">
-        			<a class="nav-link " href="contact.html">Contact</a>
-        		</li>
+            <li class="nav-item">
+              <a class="nav-link " href="contact.php">Contact</a>
+            </li>
           </ul>
         </div>
       </div>
