--- a/contact.html
+++ b/contact.html
@@ -9,29 +9,97 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="monCss.css">
 
-    <title>Xan Olazcuaga Garibal</title>
+    <title>Xan Olazcuaga Garibal - Contact</title>
   </head>
   <body>
     <div class="container-fluid">
       <div class="header navbar navbar-fixed-top" role="navigation">
         <div class="col-md-12 col-sm-6 col-xs-3">
           <ul class="nav nav-tabs nav-justified">
-        		<li class="nav-item">
-        			<a class="nav-link " href="index.html">Accueil</a>
-        		</li>
-        		<li class="nav-item">
-        			<a class="nav-link " href="CV.html">CV</a>
-        		</li>
+            <li class="nav-item">
+              <a class="nav-link " href="index.html">Accueil</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link " href="etudes.html">Diplômes et études</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link " href="expPro.html">Expériences professionnelles</a>
+            </li>
             <li class="nav-item">
               <a class="nav-link " href="competences.html">Compétences</a>
             </li>
-        		<li class="nav-item">
-        			<a class="nav-link active" href="#">Contact</a>
-        		</li>
+            <li class="nav-item">
+              <a class="nav-link active" href="#">Contact</a>
+            </li>
           </ul>
         </div>
       </div>
     </div>
+
+    <div class="container-fluid">
+    	<div class="row">
+    		<div class="col-md-12">
+          <?php
+            // S'il y des données de postées
+            if ($_SERVER['REQUEST_METHOD']=='POST') {
+              // Code PHP pour traiter l'envoi de l'email
+
+              $nombreErreur = 0; // Variable qui compte le nombre d'erreur
+              // Définit toutes les erreurs possibles
+              if (!isset($_POST['email'])) { // Si la variable "email" du formulaire n'existe pas (il y a un problème)
+                $nombreErreur++; // On incrémente la variable qui compte les erreurs
+                $erreur1 = '<p>Il y a un problème avec la variable "email".</p>';
+              } else { // Sinon, cela signifie que la variable existe (c'est normal)
+                if (empty($_POST['email'])) { // Si la variable est vide
+                  $nombreErreur++; // On incrémente la variable qui compte les erreurs
+                  $erreur2 = '<p>Vous avez oublié de donner votre email.</p>';
+                } else {
+                  if (!filter_var($_POST['email'], FILTER_VALIDATE_EMAIL)) {
+                    $nombreErreur++; // On incrémente la variable qui compte les erreurs
+                    $erreur3 = '<p>Cet email ne ressemble pas un email.</p>';
+                  }
+                }
+              }
+
+              if (!isset($_POST['message'])) {
+                $nombreErreur++;
+                $erreur4 = '<p>Il y a un problème avec la variable "message".</p>';
+              } else {
+                if (empty($_POST['message'])) {
+                  $nombreErreur++;
+                  $erreur5 = '<p>Vous avez oublié de donner un message.</p>';
+                }
+              }    // (3) Ici, il sera possible d'ajouter plus tard un code pour vérifier un captcha anti-spam.
+
+              if ($nombreErreur==0) { // S'il n'y a pas d'erreur
+                // Ici il faut ajouter tout le code pour envoyer l'email.
+                // Dans le code présenté au chapitre précédent, cela signifie au code entre les commentaires (1) et (2).
+              } else { // S'il y a un moins une erreur
+                echo '<div style="border:1px solid #ff0000; padding:5px;">';
+                echo '<p style="color:#ff0000;">Désolé, il y a eu '.$nombreErreur.' erreur(s). Voici le détail des erreurs:</p>';
+                if (isset($erreur1)) echo '<p>'.$erreur1.'</p>';
+                if (isset($erreur2)) echo '<p>'.$erreur2.'</p>';
+                if (isset($erreur3)) echo '<p>'.$erreur3.'</p>';
+                if (isset($erreur4)) echo '<p>'.$erreur4.'</p>';
+                if (isset($erreur5)) echo '<p>'.$erreur5.'</p>';
+                // (4) Ici, il sera possible d'ajouter un code d'erreur supplémentaire si un captcha anti-spam est erroné.
+                echo '</div>';
+              }
+            }
+            ?>
+          <form method="post" action="<?php echo strip_tags($_SERVER['REQUEST_URI']); ?>">
+            <p>Votre nom et prénom: <input type="text" name="nom" size="30" /></p>
+            <p>Votre email: <span style="color:#ff0000;">*</span>: <input type="text" name="email" size="30" /></p>
+            <p>Message <span style="color:#ff0000;">*</span>:</p>
+            <textarea name="message" cols="60" rows="10"></textarea>
+            <!-- Ici pourra être ajouté un captcha anti-spam (plus tard) -->
+            <p><input type="submit" name="submit" value="Envoyer" /></p>
+          </form>
+    		</div>
+    	</div>
+    </div>
+
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
