--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Surcharge du css de bootstrap pour faire apparaitre les colonnes -->
     <link rel="stylesheet" href="monCss.css">
 
-    <title>Xan Olazcuaga Garibal</title>
+    <title>Xan Olazcuaga Garibal - Accueil</title>
   </head>
   <body>
     <div class="container-fluid">
@@ -21,13 +21,16 @@
               <a class="nav-link active" href="#">Accueil</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link " href="CV.html">CV</a>
+              <a class="nav-link " href="etudes.html">Diplômes et études</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link " href="expPro.html">Expériences professionnelles</a>
             </li>
             <li class="nav-item">
               <a class="nav-link " href="competences.html">Compétences</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link " href="contact.html">Contact</a>
+              <a class="nav-link " href="contact.php">Contact</a>
             </li>
           </ul>
         </div>
